# qrpicture

./: CHANGELOG.md  Makefile.am  README.md  _config.yml  configure.ac  index.md  qrpicture.sql  qrscq.cc  qrwork.cc
.github/: FUNDING.yml
_data/: home.yml
www.qrpicture.com/: index.html  index.php  qrpicture.css  qrpicture.js  status.php  submit.php  worker.php  worker.sh
